--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         <li class="nav-item">
                 <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
         </li>
-         <li class="nav-item">
+          <li class="nav-item">
       <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
     </li>
       <% end %>
@@ -52,13 +52,19 @@
       <i class="fa fa-plus-circle"></i>
       New Place
     <% end %>
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <% if user_signed_in? %>
+        <li class="nav-item">
+               <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+               <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+        </li>
+      <% end %>
+    </ul>
       </div>
     </nav>
    <% if notice.present? %>
