so far all function working

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,9 +1,10 @@
 <% @places.each do |place| %>
-   <div class="booyah-box col-10 offset-1">
-      <h1><%= place.name %></h1>
-    <i><%= place.address %></i><br /><br />
+  <div class="booyah-box col-10 offset-1">
+    <h1><%= link_to place.name, place_path(place) %></h1><br />
+    <i><%= place.address %></i><br />
     <p><%= place.description %></p><br />
-        <% if place.user.present? %>
+
+    <% if place.user.present? %>
       <small><%= place.user.email %></small>
     <% end %>
   </div>
