--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -7,25 +7,21 @@
 
 
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    #map {
-      height: 100%;
-    }
+   #map {
+  height: 300px;
+}
   </style>
   </head>
   <body>
   <div id="map"></div>
+  <% if @place.latitude.present? && @place.longitude.present? %>
   <script>
 
     function initMap() {
-      var myLatLng = {lat: -25.363, lng: 131.044};
+      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
 
       var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 4,
+        zoom: 12,
         center: myLatLng
       });
 
@@ -38,8 +34,14 @@
   </script>
 
   <script async defer
-  src="https://maps.googleapis.com/maps/api/js?AIzaSyAeaHOwpj0Qt4onPluOvPiOFl8TU18eCfA&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDguNZ3n3PfWaihoeBw3bsZnMtMjQhSCcs">
   </script>
+
+<div id="map"></div>
+
+<% end %>
+
+<br />
 
 
 
@@ -49,4 +51,67 @@
       <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %>
     <% end %>
   </div>
+  </div>  
+  <div class="clear"></div>
+<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+  <%= f.input :message %>
+  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+
+<% end %>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+         <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+      </div>
+
+      <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+        <div class="modal-body">
+          <%= f.input :message %>
+          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="col-10 offset-1">
+<h1 class="float-left">Comments</h1>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+  Add a comment
+</button>
+</div>
+
+<div class="clear"></div>
+
+<h1>Comments</h1>
+<div class="row">
+<% @place.comments.each do |comment| %>
+  <div class="col-12 col-sm-6">
+    <blockquote>
+      <% if comment.humanized_rating.present? %>
+        <b><%= comment.humanized_rating %></b> -
+      <% end %>
+      <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
+  </div>
+<% end %>
 </div>
